# stemmer-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  _config.yml  build.sh
docs/: CODE_INSIGHTS.md
include/stemmer-library/: stem_cache.h  stemmer.h
include/stemmer-library/impl/: api.h  header.h  libstemmer.h  modules_utf8.h  stem_UTF_8_english.h
src/: api.c  libstemmer_utf8.c  stem_UTF_8_english.c  stem_cache.c  stemmer.c  utilities.c
tests/: CMakeLists.txt
tests/src/: test_stemmer.c
